jS-Strict-Mode/Examples/example14.js
// The word arguments cannot be used as a variable
"use strict";
// let arguments = 3.14; // Removing comment from this statement will result in below mentioned Error.
// SyntaxError: Unexpected eval or arguments in strict mode